Change figures file name

--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
 							<div id="graph"></div>
 						</div>
 						<div class="figures-container"><!--figures-->
-							<div class="dark"><img src="img/persondark.png"/></div>
+							<div class="dark"><img src="img/Persondark.png"/></div>
 							<div id="separator"></div>
-							<div class="light"><img src="img/personlight.png"/></div>
+							<div class="light"><img src="img/Personlight.png"/></div>
 						</div>
 					</div>
 				</div>
