Change project description

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 				<h2>Do they have the same job concerns?</h2>
 			</header>
 			<div class="project-description">
-				<p>We choose to work with the data from Unionen. The dataset is a summary of calls from the members of Unionen, listing the subject of their calls, their work profile, gender and location. For our project, we choose to work with the genders and calls subject data. We wanted to see if women and men calls for the same concerns or not.</p>
+				<p>We chose to work with the data from Unionen. The dataset is a summary of calls from the members of Unionen, listing the subject of their calls, their work profile, gender and location. For our project, we choose to work with the genders and calls subject data. We wanted to see if women and men calls for the same concerns or not.</p>
 			</div>
 
 			<div class="graph-wrapper">
